--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -1,38 +1,61 @@
 body {
-    margin: 0;
-    background-color: #000;
-    color: #fff;
-  }
-  
-  .banner {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    position: relative;
-    -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 10%, rgba(0, 0, 0, 0) 10%);
-    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 94%, rgba(0, 0, 0, 0) 100%);
-    -webkit-mask-size: 100% 100%;
-    mask-size: 100% 100%;
-  }
-  
-  .banner .content .title {
-    font-family: 'Hallowed Grounds';
-    font-size: 9em;
-  }
-  
-  .banner::before {
-    content: '';
-    position: absolute;
-    inset: 0;
-    background-image: url(../assets/bg1.png);
-    background-size: cover;
-    background-position: center;
-    z-index: -1;
-  
-    mask-image: url(../assets/ink_lv2.gif);
-    mask-size: cover;
-    mask-position: center;
+  margin: 0;
+  background-color: #000;
+  color: #fff;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
 
-  }
+
+.banner .content .title {
+  font-family: 'Hallowed Grounds';
+  font-size: 9em;
+}
+
+.banner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Full viewport height */
+  width: 100vw;  /* Full viewport width */
+  position: relative;
+  overflow: hidden;  /* Prevent overflow */
+  box-sizing: border-box; /* Ensure padding and border don't affect width/height calculation */
+
+  /* Responsive mask based on viewport height (vh) */
+  -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 90vh, rgba(0, 0, 0, 0) 100%);
+  mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 90vh, rgba(0, 0, 0, 0) 100%);
+  -webkit-mask-size: 100% 100%;
+  mask-size: 100% 100%;
+  -webkit-mask-position: center;
+  mask-position: center;
+}
+
+
+
+.banner::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  background-image: url(../assets/bg1.png);
+  background-size: cover;
+  background-position: center;
+  z-index: -1;
   
+  /* Updated mask properties */
+  mask-image: url(../assets/ink_lv2.gif);
+  mask-size: cover;  /* Ensures the mask fully covers the image */
+  mask-repeat: no-repeat;
+  mask-position: center;
+  
+  /* WebKit-specific mask properties for better compatibility */
+  -webkit-mask-image: url(../assets/ink_lv2.gif);
+  -webkit-mask-size: cover;
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+}
+
+
+
