--- a/src/styles/Signup.css
+++ b/src/styles/Signup.css
@@ -1,13 +1,11 @@
-
-
 /* Container layout for the login page */
-.signup-container {
+.scontainer {
   display: flex;
   align-items: center;
   justify-content: center;
   width: 70%;
   max-width: 1200px;
-  height: 50%;
+  height: 40%;
   margin-bottom: 60px;
   margin-top: 80px;
   margin-left:auto;
@@ -18,20 +16,24 @@
   overflow: hidden;
 }
 
+
+
+
 /* Left section with the image */
-.image-section {
+.image {
   flex: 1;
   background-color: #f4f4f4;
   display: flex;
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  gap: 20px;
+  gap: 0px;
+  margin-top:-80px;
 }
 
 .image-section img {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   object-fit: cover;
 }
 
@@ -44,6 +46,7 @@
   flex-direction: column;
   justify-content: center;
   background-color: #fdf3ea;
+  margin-top: -70px;
 }
 
 h2 {
@@ -125,5 +128,5 @@ p a {
 }
 
 p a:hover {
-  text-decoration: underline;
+  text-decoration: underline;
 }
